2004-12-08  Nathaniel Smith  <njs@codesourcery.com>

	* update.hh (pick_update_target): Rename to...
	(pick_update_candidates): ...this.  Return a set of candidates,
	rather than a single best.
	* update.cc (pick_update_candidates): Likewise.  Remove logic
	checking for unique candidate.
	* commands.cc (describe_revision): New function.
	(heads): Use it.
	(update): Use new 'pick_update_candidates' function.  Add logic
	checking for unique candidate.  On non-unique candidate, print all
	candidates, using 'describe_revision'.

	* tests/t_ambig_update.at: Check that failure messages describe
	the candidate set.

2004-12-08  Nathaniel Smith  <njs@codesourcery.com>

	* update.cc: Remove tabs.

2004-12-08  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_ambig_update.at: Also check that update fails when one
	candidate edge is deeper than the other.

2004-12-09  graydon hoare  <graydon@pobox.com>

	* ROADMAP: Add file.

2004-12-08  graydon hoare  <graydon@pobox.com>

	* change_set.cc (extend_renumbering_via_added_files): 
	Look up parent tid in existing renumbering.
	* commands.cc (attr): Check index for "set" subcommand.
	(lca): New diagnostic command.
	(log): Tidy up output formatting a bit.
	* po/monotone.pot: Regenerate.
	* tests/t_add_edge.at: New test to catch add failure.
	* testsuite.at: Call it.

2004-12-07  Richard Levitte  <richard@levitte.org>

	* Makefile.am: Keep package_*revision.{txt,h}, so they are saved
	as part of a distribution, and thereby make as sure as possible
	people who download monotone get historical information on where
	their copy of monotone came from.

2004-12-06  Richard Levitte  <richard@levitte.org>

	* monotone.cc: Add a hint on how to use --ticker.

2004-12-08  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_ambig_update.at: New test.
	* testsuite.at: Add it.

	* tests/t_explicit_merge.at: Add, having forgotten to last time.
	
2004-12-08  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_explicit_merge.at: New test.