@@ -15,6 +15,7 @@ AT_TESTED([monotone])
 # some command abbreviations to make life easier
 
 m4_define([MONOTONE], [monotone --rcfile=test_hooks.lua --nostd --norc --db=test.db --key=tester@test.net])
+m4_define([RAW_MONOTONE], [monotone])
 m4_define([SHA1], [monotone identify $1])
 m4_define([BASE_REVISION], [cat MT/revision])
 m4_define([WORKING_REVISION], [monotone cat revision | monotone identify])
@@ -273,3 +274,4 @@ m4_include(tests/t_add_patch_drop_add.at)
 m4_include(tests/t_patch_vs_drop_add.at)
 m4_include(tests/t_explicit_merge.at)
 m4_include(tests/t_ambig_update.at)
+m4_include(tests/t_checkout_options.at)
